--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                 </nav>
                 <div class="btns">
                     <div class="loop">
-                        <img src="img/loop.svg" alt="loop">
+                        <img src="loop.svg" alt="loop">
                     </div>
                     <div class="cart">
-                        <img src="img/cart.svg" alt="cart">
+                        <img src="cart.svg" alt="cart">
                     </div>
                     <button class="btn btn-burger">
                         <span class="btn-burger__line"></span>
@@ -148,28 +148,28 @@
         <div class="cards">
             <div class="cards__item">
                 <div class="icon">
-                    <img src="img/icon-why-1.svg" alt="">
+                    <img src="icon-why-1.svg" alt="">
                 </div>
                 <h3 class="title-h3">3K</h3>
                 <p class="cards__text">CASES DONE</p>
             </div>
             <div class="cards__item">
                 <div class="icon">
-                    <img src="img/icon-why-2.svg" alt="">
+                    <img src="icon-why-2.svg" alt="">
                 </div>
                 <h3 class="title-h3">45</h3>
                 <p class="cards__text">HAPPY CUSTOMERS</p>
             </div>
             <div class="cards__item">
                 <div class="icon">
-                    <img src="img/icon-why-3.svg" alt="">
+                    <img src="icon-why-3.svg" alt="">
                 </div>
                 <h3 class="title-h3">12+</h3>
                 <p class="cards__text">AWARD WINNING</p>
             </div>
             <div class="cards__item">
                 <div class="icon">
-                    <img src="img/icon-why-4.svg" alt="">
+                    <img src="icon-why-4.svg" alt="">
                 </div>
                 <h3 class="title-h3">1.5K</h3>
                 <p class="cards__text">CASES DONE</p>
@@ -192,21 +192,21 @@
                     <h5 class="cards__title">A single source of truth</h5>
                     <p class="text">Newton thought that light was made up of particles, but then it was discovered </p>
                 </div>
-                <img src="img/advice-1.png" alt="">
+                <img src="advice-1.png" alt="">
             </div>
             <div class="cards__item">
                 <div class="cards__content">
                     <h5 class="cards__title">Fastest way to organize</h5>
                     <p class="text">“Quantum mechanics” is the description of the behaviour of matter</p>
                 </div>
-                <img src="img/advice-2.png" alt="">
+                <img src="advice-2.png" alt="">
             </div>
             <div class="cards__item">
                 <div class="cards__content">
                     <h5 class="cards__title">Fastest way to take action</h5>
                     <p class="text">They describe a universe consisting of bodies moving</p>
                 </div>
-                <img src="img/advice-3.png" alt="">
+                <img src="advice-3.png" alt="">
             </div>
             <div class="cards__item">
                 <div class="cards__content">
@@ -214,7 +214,7 @@
                     </h5>
                     <p class="text">They finally obtained a consistent description of the behaviour </p>
                 </div>
-                <img src="img/advice-4.png" alt="">
+                <img src="advice-4.png" alt="">
             </div>
         </div>
     </section>
@@ -245,7 +245,7 @@
                     <div class="description__text">
                         <div class="description__block">
                             <div class="icon">
-                                <img src="img/service-1.svg" alt="img">
+                                <img src="service-1.svg" alt="img">
                             </div>
                             <div class="content">
                                 <p class="title">the quick fox jumps over the lazy dog
@@ -255,7 +255,7 @@
                         </div>
                         <div class="description__block">
                             <div class="icon">
-                                <img src="img/service-2.svg" alt="img">
+                                <img src="service-2.svg" alt="img">
                             </div>
                             <div class="content">
                                 <p class="title">the quick fox jumps over the lazy dog
@@ -281,19 +281,19 @@
                     <img src="img/icon-hooli.svg" alt="logo">
                 </div>
                 <div class="section-customers__item">
-                    <img src="img/icon-lyft.svg" alt="logo">
+                    <img src="icon-lyft.svg" alt="logo">
                 </div>
                 <div class="section-customers__item">
-                    <img src="img/icon-hat.svg" alt="logo">
+                    <img src="icon-hat.svg" alt="logo">
                 </div>
                 <div class="section-customers__item">
-                    <img src="img/icon-stripe.svg" alt="logo">
+                    <img src="icon-stripe.svg" alt="logo">
                 </div>
                 <div class="section-customers__item">
-                    <img src="img/icon-aws.svg" alt="logo">
+                    <img src="icon-aws.svg" alt="logo">
                 </div>
                 <div class="section-customers__item">
-                    <img src="img/icon-head.svg" alt="logo">
+                    <img src="icon-head.svg" alt="logo">
                 </div>
             </div>
             <div class="section-customers__form">
@@ -450,19 +450,19 @@
                         <div class="blocks__item-title">Get In Touch</div>
                         <div class="blocks__item-subtitle">
                             <div class="icon">
-                                <img src="img/icon-phone-small.svg" alt="">
+                                <img src="icon-phone-small.svg" alt="">
                             </div>
                             <a href="tel:(480) 555-0103" class="link">(480) 555-0103</a>
                         </div>
                         <div class="blocks__item-subtitle">
                             <div class="icon">
-                                <img src="img/icon-map-small.svg" alt="">
+                                <img src="icon-map-small.svg" alt="">
                             </div>
                             <a href="#" class="link">4517 Washington Ave.</a>
                         </div>
                         <div class="blocks__item-subtitle">
                             <div class="icon">
-                                <img src="img/icon-telegram-small.svg" alt="">
+                                <img src="icon-telegram-small.svg" alt="">
                             </div>
                             <a href="mailto:debra.holt@example.com" target="_blank" class="link" rel="noopener noreferrer">debra.holt@example.com</a>
                         </div>
@@ -476,16 +476,16 @@
             </div>
             <div class="footer__bottom-socials">
                 <a href="#" class="socials-link">
-                    <img src="img/social-facebook.svg" alt="facebook">
+                    <img src="social-facebook.svg" alt="facebook">
                 </a>
                 <a href="#" class="socials-link">
-                    <img src="img/social-instagram.svg" alt="instagram">
+                    <img src="social-instagram.svg" alt="instagram">
                 </a>
                 <a href="#" class="socials-link">
-                    <img src="img/social-twitter.svg" alt="twitter">
+                    <img src="social-twitter.svg" alt="twitter">
                 </a>
                 <a href="#" class="socials-link">
-                    <img src="img/social-youtube.svg" alt="youtube">
+                    <img src="social-youtube.svg" alt="youtube">
                 </a>
             </div>
         </div>
