--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             <p class="text">Problems trying to resolve the conflict between the two major realms of Classical physics: Newtonian mechanics </p>
             <div class="section-best-service__content">
                 <div class="video">
-                    <img src="img/video.png" alt="video">
+                    <img src="video.png" alt="video">
                     <div class="btn-icon-play">
                         <a href="#" class="play-link">
                             <span class="icon-play">
@@ -278,7 +278,7 @@
         <div class="wrapper-inner">
             <div class="section-customers__logo">
                 <div class="section-customers__item">
-                    <img src="img/icon-hooli.svg" alt="logo">
+                    <img src="icon-hooli.svg" alt="logo">
                 </div>
                 <div class="section-customers__item">
                     <img src="icon-lyft.svg" alt="logo">
